--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "form-data": "^3.0.0",
     "node-fetch": "^2.6.1",
     "simple-node-logger": "^18.12.24"
