--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2",
+    "connection-tester": "^0.2.0",
     "form-data": "^3.0.0",
     "node-fetch": "^2.6.1",
     "simple-node-logger": "^18.12.24"
